--- a/actions.html
+++ b/actions.html
@@ -15,7 +15,7 @@
 <body style="padding-top: 3.5rem;">
     <nav class="navbar navbar-expand-md fixed-top">
         <img src="./public/Assets/images/google_meet_icon.png" class="logo" alt="" >
-        <a class="navbar-brand" href="#">Google Meet</a>
+        <a class="navbar-brand" href="#">GetSet Meet</a>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item">
