--- a/actions.html
+++ b/actions.html
@@ -61,7 +61,7 @@
             </div>
           </div>
     </main>
-    <footer class="container"><h6>Learn more about <span class="learn-more text-info">google meet</span></h6></footer>
+    <footer class="container"><h6>Learn more about <span class="learn-more text-info">getset meet</span></h6></footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
         $(function(){
